force-app/main/default/objects/Budget_Line_Item__c/fields/Paid_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Paid_Disbursements__c</fullName>
    <label>Paid Disbursements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>