force-app/main/default/objects/Budget_Line_Item__c/fields/Total_Line_Item_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Item_Amount__c</fullName>
    <label>Total Line Item Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>