force-app/main/default/objects/Budget_Line_Item__c/fields/Unallocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Amount__c</fullName>
    <formula>Total_Line_Item_Amount__c - Allocated_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unallocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>