force-app/main/default/objects/Budget_Line_Item__c/fields/Unpaid_Disbursements__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Disbursements__c</fullName>
    <formula>Allocated_Amount__c - Paid_Disbursements__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unpaid Disbursements</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>